backend/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> listing_statements
Rule 2     statement -> booking_statements
Rule 3     statement -> reservation_statements
Rule 4     listing_statements -> listing_statement
Rule 5     listing_statements -> query_listing_statements
Rule 6     listing_statement -> LIST name_list BOOKINGS PERIOD
Rule 7     query_listing_statements -> query_listing_statement
Rule 8     query_listing_statements -> query_schedule_listing_statement
Rule 9     query_listing_statement -> WHAT SINGLE_QUOTE RESOURCE SINGLE_QUOTE ARE AVAILABLE IN LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
Rule 10    query_listing_statement -> WHAT SINGLE_QUOTE RESOURCE SINGLE_QUOTE ARE AVAILABLE FOR SINGLE_QUOTE RESOURCE SINGLE_QUOTE IN LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
Rule 11    query_schedule_listing_statement -> WHAT IS SINGLE_QUOTE RESOURCE SINGLE_QUOTE SCHEDULE FROM LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
Rule 12    query_schedule_listing_statement -> WHAT IS SINGLE_QUOTE RESOURCE SINGLE_QUOTE SCHEDULE AT LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
Rule 13    booking_statements -> booking_statement
Rule 14    booking_statements -> schedule_booking_statement
Rule 15    booking_statement -> BOOK booking_list FOR SINGLE_QUOTE RESOURCE SINGLE_QUOTE AT LBRACKET location RBRACKET ON LBRACKET date RBRACKET FOR name_list PERIOD
Rule 16    schedule_booking_statement -> BOOK booking_list FOR SINGLE_QUOTE RESOURCE SINGLE_QUOTE FROM LBRACKET location RBRACKET ON LBRACKET date RBRACKET FOR name_list PERIOD
Rule 17    booking_list -> INTEGER SINGLE_QUOTE RESOURCE SINGLE_QUOTE
Rule 18    booking_list -> INTEGER SINGLE_QUOTE RESOURCE SINGLE_QUOTE AND INTEGER SINGLE_QUOTE RESOURCE SINGLE_QUOTE
Rule 19    booking_list -> INTEGER SINGLE_QUOTE RESOURCE SINGLE_QUOTE COMMA booking_list
Rule 20    location -> LOCATION
Rule 21    location -> DOUBLE_QUOTE LOCATION DOUBLE_QUOTE TO DOUBLE_QUOTE LOCATION DOUBLE_QUOTE
Rule 22    date -> DATE
Rule 23    date -> DOUBLE_QUOTE DATE DOUBLE_QUOTE TO DOUBLE_QUOTE DATE DOUBLE_QUOTE
Rule 24    name_list -> LPAREN name_group RPAREN
Rule 25    name_list -> LPAREN name_group RPAREN AND LPAREN name_group RPAREN
Rule 26    name_list -> LPAREN name_group RPAREN COMMA name_list
Rule 27    name_group -> names
Rule 28    name_group -> names AND names
Rule 29    name_group -> names COMMA name_group
Rule 30    names -> NAME
Rule 31    names -> NAME SPACE NAME
Rule 32    reservation_statements -> confirm_statement
Rule 33    reservation_statements -> cancel_statement
Rule 34    reservation_statements -> pay_statement
Rule 35    confirm_statement -> CONFIRM RESERVATION FOR BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD
Rule 36    cancel_statement -> CANCEL RESERVATION FOR BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD
Rule 37    pay_statement -> PAY RESERVATION FOR BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD

Terminals, with rules where they appear

AND                  : 18 25 28
ARE                  : 9 10
AT                   : 12 15
AVAILABLE            : 9 10
BOOK                 : 15 16
BOOKINGS             : 6
BOOKING_ID           : 35 36 37
CANCEL               : 36
COMMA                : 19 26 29
CONFIRM              : 35
DATE                 : 22 23 23
DOUBLE_QUOTE         : 21 21 21 21 23 23 23 23
EQUAL_SIGN           : 35 36 37
FOR                  : 10 15 15 16 16 35 36 37
FROM                 : 11 16
ID_STRING            : 35 36 37
IN                   : 9 10
INTEGER              : 17 18 18 19
IS                   : 11 12
LBRACKET             : 9 9 10 10 11 11 12 12 15 15 16 16
LIST                 : 6
LOCATION             : 20 21 21
LPAREN               : 24 25 25 26
NAME                 : 30 31 31
ON                   : 9 10 11 12 15 16
PAY                  : 37
PERIOD               : 6 15 16 35 36 37
QUESTION_SIGN        : 9 10 11 12
RBRACKET             : 9 9 10 10 11 11 12 12 15 15 16 16
RESERVATION          : 35 36 37
RESOURCE             : 9 10 10 11 12 15 16 17 18 18 19
RPAREN               : 24 25 25 26
SCHEDULE             : 11 12
SINGLE_QUOTE         : 9 9 10 10 10 10 11 11 12 12 15 15 16 16 17 17 18 18 18 18 19 19 35 35 36 36 37 37
SPACE                : 31
TO                   : 21 23
WHAT                 : 9 10 11 12
error                : 

Nonterminals, with rules where they appear

booking_list         : 15 16 19
booking_statement    : 13
booking_statements   : 2
cancel_statement     : 33
confirm_statement    : 32
date                 : 9 10 11 12 15 16
listing_statement    : 4
listing_statements   : 1
location             : 9 10 11 12 15 16
name_group           : 24 25 25 26 29
name_list            : 6 15 16 26
names                : 27 28 28 29
pay_statement        : 34
query_listing_statement : 7
query_listing_statements : 5
query_schedule_listing_statement : 8
reservation_statements : 3
schedule_booking_statement : 14
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . listing_statements
    (2) statement -> . booking_statements
    (3) statement -> . reservation_statements
    (4) listing_statements -> . listing_statement
    (5) listing_statements -> . query_listing_statements
    (13) booking_statements -> . booking_statement
    (14) booking_statements -> . schedule_booking_statement
    (32) reservation_statements -> . confirm_statement
    (33) reservation_statements -> . cancel_statement
    (34) reservation_statements -> . pay_statement
    (6) listing_statement -> . LIST name_list BOOKINGS PERIOD
    (7) query_listing_statements -> . query_listing_statement
    (8) query_listing_statements -> . query_schedule_listing_statement
    (15) booking_statement -> . BOOK booking_list FOR SINGLE_QUOTE RESOURCE SINGLE_QUOTE AT LBRACKET location RBRACKET ON LBRACKET date RBRACKET FOR name_list PERIOD
    (16) schedule_booking_statement -> . BOOK booking_list FOR SINGLE_QUOTE RESOURCE SINGLE_QUOTE FROM LBRACKET location RBRACKET ON LBRACKET date RBRACKET FOR name_list PERIOD
    (35) confirm_statement -> . CONFIRM RESERVATION FOR BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD
    (36) cancel_statement -> . CANCEL RESERVATION FOR BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD
    (37) pay_statement -> . PAY RESERVATION FOR BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD
    (9) query_listing_statement -> . WHAT SINGLE_QUOTE RESOURCE SINGLE_QUOTE ARE AVAILABLE IN LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
    (10) query_listing_statement -> . WHAT SINGLE_QUOTE RESOURCE SINGLE_QUOTE ARE AVAILABLE FOR SINGLE_QUOTE RESOURCE SINGLE_QUOTE IN LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
    (11) query_schedule_listing_statement -> . WHAT IS SINGLE_QUOTE RESOURCE SINGLE_QUOTE SCHEDULE FROM LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
    (12) query_schedule_listing_statement -> . WHAT IS SINGLE_QUOTE RESOURCE SINGLE_QUOTE SCHEDULE AT LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN

    LIST            shift and go to state 12
    BOOK            shift and go to state 15
    CONFIRM         shift and go to state 16
    CANCEL          shift and go to state 17
    PAY             shift and go to state 18
    WHAT            shift and go to state 19

    statement                      shift and go to state 1
    listing_statements             shift and go to state 2
    booking_statements             shift and go to state 3
    reservation_statements         shift and go to state 4
    listing_statement              shift and go to state 5
    query_listing_statements       shift and go to state 6
    booking_statement              shift and go to state 7
    schedule_booking_statement     shift and go to state 8
    confirm_statement              shift and go to state 9
    cancel_statement               shift and go to state 10
    pay_statement                  shift and go to state 11
    query_listing_statement        shift and go to state 13
    query_schedule_listing_statement shift and go to state 14

state 1

    (0) S' -> statement .



state 2

    (1) statement -> listing_statements .

    $end            reduce using rule 1 (statement -> listing_statements .)


state 3

    (2) statement -> booking_statements .

    $end            reduce using rule 2 (statement -> booking_statements .)


state 4

    (3) statement -> reservation_statements .

    $end            reduce using rule 3 (statement -> reservation_statements .)


state 5

    (4) listing_statements -> listing_statement .

    $end            reduce using rule 4 (listing_statements -> listing_statement .)


state 6

    (5) listing_statements -> query_listing_statements .

    $end            reduce using rule 5 (listing_statements -> query_listing_statements .)


state 7

    (13) booking_statements -> booking_statement .

    $end            reduce using rule 13 (booking_statements -> booking_statement .)


state 8

    (14) booking_statements -> schedule_booking_statement .

    $end            reduce using rule 14 (booking_statements -> schedule_booking_statement .)


state 9

    (32) reservation_statements -> confirm_statement .

    $end            reduce using rule 32 (reservation_statements -> confirm_statement .)


state 10

    (33) reservation_statements -> cancel_statement .

    $end            reduce using rule 33 (reservation_statements -> cancel_statement .)


state 11

    (34) reservation_statements -> pay_statement .

    $end            reduce using rule 34 (reservation_statements -> pay_statement .)


state 12

    (6) listing_statement -> LIST . name_list BOOKINGS PERIOD
    (24) name_list -> . LPAREN name_group RPAREN
    (25) name_list -> . LPAREN name_group RPAREN AND LPAREN name_group RPAREN
    (26) name_list -> . LPAREN name_group RPAREN COMMA name_list

    LPAREN          shift and go to state 21

    name_list                      shift and go to state 20

state 13

    (7) query_listing_statements -> query_listing_statement .

    $end            reduce using rule 7 (query_listing_statements -> query_listing_statement .)


state 14

    (8) query_listing_statements -> query_schedule_listing_statement .

    $end            reduce using rule 8 (query_listing_statements -> query_schedule_listing_statement .)


state 15

    (15) booking_statement -> BOOK . booking_list FOR SINGLE_QUOTE RESOURCE SINGLE_QUOTE AT LBRACKET location RBRACKET ON LBRACKET date RBRACKET FOR name_list PERIOD
    (16) schedule_booking_statement -> BOOK . booking_list FOR SINGLE_QUOTE RESOURCE SINGLE_QUOTE FROM LBRACKET location RBRACKET ON LBRACKET date RBRACKET FOR name_list PERIOD
    (17) booking_list -> . INTEGER SINGLE_QUOTE RESOURCE SINGLE_QUOTE
    (18) booking_list -> . INTEGER SINGLE_QUOTE RESOURCE SINGLE_QUOTE AND INTEGER SINGLE_QUOTE RESOURCE SINGLE_QUOTE
    (19) booking_list -> . INTEGER SINGLE_QUOTE RESOURCE SINGLE_QUOTE COMMA booking_list

    INTEGER         shift and go to state 23

    booking_list                   shift and go to state 22

state 16

    (35) confirm_statement -> CONFIRM . RESERVATION FOR BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD

    RESERVATION     shift and go to state 24


state 17

    (36) cancel_statement -> CANCEL . RESERVATION FOR BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD

    RESERVATION     shift and go to state 25


state 18

    (37) pay_statement -> PAY . RESERVATION FOR BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD

    RESERVATION     shift and go to state 26


state 19

    (9) query_listing_statement -> WHAT . SINGLE_QUOTE RESOURCE SINGLE_QUOTE ARE AVAILABLE IN LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
    (10) query_listing_statement -> WHAT . SINGLE_QUOTE RESOURCE SINGLE_QUOTE ARE AVAILABLE FOR SINGLE_QUOTE RESOURCE SINGLE_QUOTE IN LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
    (11) query_schedule_listing_statement -> WHAT . IS SINGLE_QUOTE RESOURCE SINGLE_QUOTE SCHEDULE FROM LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
    (12) query_schedule_listing_statement -> WHAT . IS SINGLE_QUOTE RESOURCE SINGLE_QUOTE SCHEDULE AT LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN

    SINGLE_QUOTE    shift and go to state 27
    IS              shift and go to state 28


state 20

    (6) listing_statement -> LIST name_list . BOOKINGS PERIOD

    BOOKINGS        shift and go to state 29


state 21

    (24) name_list -> LPAREN . name_group RPAREN
    (25) name_list -> LPAREN . name_group RPAREN AND LPAREN name_group RPAREN
    (26) name_list -> LPAREN . name_group RPAREN COMMA name_list
    (27) name_group -> . names
    (28) name_group -> . names AND names
    (29) name_group -> . names COMMA name_group
    (30) names -> . NAME
    (31) names -> . NAME SPACE NAME

    NAME            shift and go to state 32

    name_group                     shift and go to state 30
    names                          shift and go to state 31

state 22

    (15) booking_statement -> BOOK booking_list . FOR SINGLE_QUOTE RESOURCE SINGLE_QUOTE AT LBRACKET location RBRACKET ON LBRACKET date RBRACKET FOR name_list PERIOD
    (16) schedule_booking_statement -> BOOK booking_list . FOR SINGLE_QUOTE RESOURCE SINGLE_QUOTE FROM LBRACKET location RBRACKET ON LBRACKET date RBRACKET FOR name_list PERIOD

    FOR             shift and go to state 33


state 23

    (17) booking_list -> INTEGER . SINGLE_QUOTE RESOURCE SINGLE_QUOTE
    (18) booking_list -> INTEGER . SINGLE_QUOTE RESOURCE SINGLE_QUOTE AND INTEGER SINGLE_QUOTE RESOURCE SINGLE_QUOTE
    (19) booking_list -> INTEGER . SINGLE_QUOTE RESOURCE SINGLE_QUOTE COMMA booking_list

    SINGLE_QUOTE    shift and go to state 34


state 24

    (35) confirm_statement -> CONFIRM RESERVATION . FOR BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD

    FOR             shift and go to state 35


state 25

    (36) cancel_statement -> CANCEL RESERVATION . FOR BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD

    FOR             shift and go to state 36


state 26

    (37) pay_statement -> PAY RESERVATION . FOR BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD

    FOR             shift and go to state 37


state 27

    (9) query_listing_statement -> WHAT SINGLE_QUOTE . RESOURCE SINGLE_QUOTE ARE AVAILABLE IN LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
    (10) query_listing_statement -> WHAT SINGLE_QUOTE . RESOURCE SINGLE_QUOTE ARE AVAILABLE FOR SINGLE_QUOTE RESOURCE SINGLE_QUOTE IN LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN

    RESOURCE        shift and go to state 38


state 28

    (11) query_schedule_listing_statement -> WHAT IS . SINGLE_QUOTE RESOURCE SINGLE_QUOTE SCHEDULE FROM LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
    (12) query_schedule_listing_statement -> WHAT IS . SINGLE_QUOTE RESOURCE SINGLE_QUOTE SCHEDULE AT LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN

    SINGLE_QUOTE    shift and go to state 39


state 29

    (6) listing_statement -> LIST name_list BOOKINGS . PERIOD

    PERIOD          shift and go to state 40


state 30

    (24) name_list -> LPAREN name_group . RPAREN
    (25) name_list -> LPAREN name_group . RPAREN AND LPAREN name_group RPAREN
    (26) name_list -> LPAREN name_group . RPAREN COMMA name_list

    RPAREN          shift and go to state 41


state 31

    (27) name_group -> names .
    (28) name_group -> names . AND names
    (29) name_group -> names . COMMA name_group

    RPAREN          reduce using rule 27 (name_group -> names .)
    AND             shift and go to state 42
    COMMA           shift and go to state 43


state 32

    (30) names -> NAME .
    (31) names -> NAME . SPACE NAME

    AND             reduce using rule 30 (names -> NAME .)
    COMMA           reduce using rule 30 (names -> NAME .)
    RPAREN          reduce using rule 30 (names -> NAME .)
    SPACE           shift and go to state 44


state 33

    (15) booking_statement -> BOOK booking_list FOR . SINGLE_QUOTE RESOURCE SINGLE_QUOTE AT LBRACKET location RBRACKET ON LBRACKET date RBRACKET FOR name_list PERIOD
    (16) schedule_booking_statement -> BOOK booking_list FOR . SINGLE_QUOTE RESOURCE SINGLE_QUOTE FROM LBRACKET location RBRACKET ON LBRACKET date RBRACKET FOR name_list PERIOD

    SINGLE_QUOTE    shift and go to state 45


state 34

    (17) booking_list -> INTEGER SINGLE_QUOTE . RESOURCE SINGLE_QUOTE
    (18) booking_list -> INTEGER SINGLE_QUOTE . RESOURCE SINGLE_QUOTE AND INTEGER SINGLE_QUOTE RESOURCE SINGLE_QUOTE
    (19) booking_list -> INTEGER SINGLE_QUOTE . RESOURCE SINGLE_QUOTE COMMA booking_list

    RESOURCE        shift and go to state 46


state 35

    (35) confirm_statement -> CONFIRM RESERVATION FOR . BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD

    BOOKING_ID      shift and go to state 47


state 36

    (36) cancel_statement -> CANCEL RESERVATION FOR . BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD

    BOOKING_ID      shift and go to state 48


state 37

    (37) pay_statement -> PAY RESERVATION FOR . BOOKING_ID EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD

    BOOKING_ID      shift and go to state 49


state 38

    (9) query_listing_statement -> WHAT SINGLE_QUOTE RESOURCE . SINGLE_QUOTE ARE AVAILABLE IN LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
    (10) query_listing_statement -> WHAT SINGLE_QUOTE RESOURCE . SINGLE_QUOTE ARE AVAILABLE FOR SINGLE_QUOTE RESOURCE SINGLE_QUOTE IN LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN

    SINGLE_QUOTE    shift and go to state 50


state 39

    (11) query_schedule_listing_statement -> WHAT IS SINGLE_QUOTE . RESOURCE SINGLE_QUOTE SCHEDULE FROM LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
    (12) query_schedule_listing_statement -> WHAT IS SINGLE_QUOTE . RESOURCE SINGLE_QUOTE SCHEDULE AT LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN

    RESOURCE        shift and go to state 51


state 40

    (6) listing_statement -> LIST name_list BOOKINGS PERIOD .

    $end            reduce using rule 6 (listing_statement -> LIST name_list BOOKINGS PERIOD .)


state 41

    (24) name_list -> LPAREN name_group RPAREN .
    (25) name_list -> LPAREN name_group RPAREN . AND LPAREN name_group RPAREN
    (26) name_list -> LPAREN name_group RPAREN . COMMA name_list

    BOOKINGS        reduce using rule 24 (name_list -> LPAREN name_group RPAREN .)
    PERIOD          reduce using rule 24 (name_list -> LPAREN name_group RPAREN .)
    AND             shift and go to state 52
    COMMA           shift and go to state 53


state 42

    (28) name_group -> names AND . names
    (30) names -> . NAME
    (31) names -> . NAME SPACE NAME

    NAME            shift and go to state 32

    names                          shift and go to state 54

state 43

    (29) name_group -> names COMMA . name_group
    (27) name_group -> . names
    (28) name_group -> . names AND names
    (29) name_group -> . names COMMA name_group
    (30) names -> . NAME
    (31) names -> . NAME SPACE NAME

    NAME            shift and go to state 32

    names                          shift and go to state 31
    name_group                     shift and go to state 55

state 44

    (31) names -> NAME SPACE . NAME

    NAME            shift and go to state 56


state 45

    (15) booking_statement -> BOOK booking_list FOR SINGLE_QUOTE . RESOURCE SINGLE_QUOTE AT LBRACKET location RBRACKET ON LBRACKET date RBRACKET FOR name_list PERIOD
    (16) schedule_booking_statement -> BOOK booking_list FOR SINGLE_QUOTE . RESOURCE SINGLE_QUOTE FROM LBRACKET location RBRACKET ON LBRACKET date RBRACKET FOR name_list PERIOD

    RESOURCE        shift and go to state 57


state 46

    (17) booking_list -> INTEGER SINGLE_QUOTE RESOURCE . SINGLE_QUOTE
    (18) booking_list -> INTEGER SINGLE_QUOTE RESOURCE . SINGLE_QUOTE AND INTEGER SINGLE_QUOTE RESOURCE SINGLE_QUOTE
    (19) booking_list -> INTEGER SINGLE_QUOTE RESOURCE . SINGLE_QUOTE COMMA booking_list

    SINGLE_QUOTE    shift and go to state 58


state 47

    (35) confirm_statement -> CONFIRM RESERVATION FOR BOOKING_ID . EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD

    EQUAL_SIGN      shift and go to state 59


state 48

    (36) cancel_statement -> CANCEL RESERVATION FOR BOOKING_ID . EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD

    EQUAL_SIGN      shift and go to state 60


state 49

    (37) pay_statement -> PAY RESERVATION FOR BOOKING_ID . EQUAL_SIGN SINGLE_QUOTE ID_STRING SINGLE_QUOTE PERIOD

    EQUAL_SIGN      shift and go to state 61


state 50

    (9) query_listing_statement -> WHAT SINGLE_QUOTE RESOURCE SINGLE_QUOTE . ARE AVAILABLE IN LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
    (10) query_listing_statement -> WHAT SINGLE_QUOTE RESOURCE SINGLE_QUOTE . ARE AVAILABLE FOR SINGLE_QUOTE RESOURCE SINGLE_QUOTE IN LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN

    ARE             shift and go to state 62


state 51

    (11) query_schedule_listing_statement -> WHAT IS SINGLE_QUOTE RESOURCE . SINGLE_QUOTE SCHEDULE FROM LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN
    (12) query_schedule_listing_statement -> WHAT IS SINGLE_QUOTE RESOURCE . SINGLE_QUOTE SCHEDULE AT LBRACKET location RBRACKET ON LBRACKET date RBRACKET QUESTION_SIGN

    SINGLE_QUOTE    shift and go to state 63


state 52

    (25) name_list -> LPAREN name_group RPAREN AND . LPAREN name_group RPAREN

    LPAREN          shift and go to state 64


state 53
